apps/servicey/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servicey
  labels:
    istio-injection: enabled
