apps/servicey/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicey-vs
  namespace: servicey
spec:
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: servicey
        port:
          number: 8080
